# M11_Semana2_Data_Ingestion

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
motor_dados/: consumer.py  env_test.py  producer.py
